fix(@clayui/css): Forms remove Bootstrap's confusing way of setting an inset box-shadow on an input. This causes flickering on .btn.form-control-select on click. If you want a regular box-shadow and an inset box-shadow on an input define them both inside the $input-box-shadow variable. Example below:
```
$input-box-shadow: #{inset 0 1px 1px 0 rgb(0 0 0 / 8%), 5px 5px 6px 0 rgb(0 0 0 / 31%)};
```

issue #4206

--- a/packages/clay-css/src/scss/atlas/variables/_forms.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_forms.scss
@@ -49,8 +49,7 @@ $form-group-sm-item-label-spacer: 1.5625rem !default; // 25px
 $input-color: $gray-900 !default;
 $input-bg: $gray-200 !default;
 $input-border-color: $gray-300 !default;
-// Will need to be revisited if https://github.com/twbs/bootstrap/pull/24821 merge error is fixed
-$input-box-shadow: 0 0 rgba(0, 0, 0, 0) !default;
+$input-box-shadow: none !default;
 $input-placeholder-color: $gray-600 !default;
 $input-label-color: $gray-900 !default;
 
