--- a/packages/clay-css/src/scss/cadmin/variables/_forms.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_forms.scss
@@ -12,7 +12,7 @@ $cadmin-input-border-width: $cadmin-input-border-top-width
 	$cadmin-input-border-left-width !default;
 
 $cadmin-input-border-radius: $cadmin-border-radius !default;
-$cadmin-input-box-shadow: 0 0 rgba(0, 0, 0, 0) !default;
+$cadmin-input-box-shadow: null !default;
 $cadmin-input-color: $cadmin-gray-900 !default;
 $cadmin-input-font-family: $cadmin-input-btn-font-family !default;
 $cadmin-input-font-size: $cadmin-input-btn-font-size !default;
