--- a/packages/clay-css/src/scss/components/_forms.scss
+++ b/packages/clay-css/src/scss/components/_forms.scss
@@ -121,15 +121,7 @@ label {
 	&.focus {
 		background-color: $input-focus-bg;
 		border-color: $input-focus-border-color;
-
-		// Avoid using mixin so we can pass custom focus shadow properly
-
-		@if $enable-shadows {
-			box-shadow: $input-box-shadow, $input-focus-box-shadow;
-		} @else {
-			box-shadow: $input-focus-box-shadow;
-		}
-
+		box-shadow: $input-focus-box-shadow;
 		color: $input-focus-color;
 		outline: 0;
 
